bk_ida/gccida/c2/ix86_hard_regno_mode_ok
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_hard_regno_mode_ok/src/i386.c:12846:42: error: must use 'enum' tag to refer to type 'machine_mode'
int  ix86_hard_regno_mode_ok( int regno, machine_mode mode) 
                                         ^
                                         enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_hard_regno_mode_ok/src/i386.c:12866:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v2 = mode_class_0[mode]; 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_hard_regno_mode_ok/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/ix86_hard_regno_mode_ok/src/obj/i386.o] Error 1
